<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="com.qhsy.hml.activity.MainActivity" >

    <FrameLayout
        android:id="@+id/frgment_content"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" />

    <RadioGroup
        android:id="@+id/bottom_banner"
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:background="@drawable/navigaition_laout_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/home_tv"
            style="@style/radioStyle"
            android:drawableTop="@drawable/home_tab_selector"
            android:text="@string/home" />

        <RadioButton
            android:id="@+id/time_limited_buy"
            style="@style/radioStyle"
            android:drawableTop="@drawable/time_lim_tab_selector"
            android:text="@string/time_limited_buy" />

        <RadioButton
            android:id="@+id/sister_group"
            style="@style/radioStyle"
            android:drawableTop="@drawable/sis_group_tab_selector"
            android:text="@string/video" />

      
        
        <RadioButton
            android:id="@+id/tiny_community"
            style="@style/radioStyle"
            android:drawableTop="@drawable/tiny_com_tab_selector"
            android:text="@string/me" />
    </RadioGroup>

</LinearLayout>