<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@color/meili"
    android:orientation="vertical" >

    <com.ipassistat.ipa.view.TitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </com.ipassistat.ipa.view.TitleBar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                style="@style/settings_button"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_marginTop="11dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/push"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/push_switch"
                    android:textColor="@color/black_03"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/push_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/settings_switch"
                    android:button="@null"
                    android:gravity="center_vertical" 
                    android:checked="true"/>
            </LinearLayout>

            <TextView
                android:id="@+id/changePasswd"
                style="@style/settings_button"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:drawableRight="@drawable/personal_arraws"
                android:gravity="center_vertical"
                android:text="@string/change_passwd" />

            <TextView
                android:id="@+id/clearCache"
                style="@style/settings_button"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:drawableRight="@drawable/personal_arraws"
                android:gravity="center_vertical"
                android:text="@string/clear_cache" />

            <TextView
                android:id="@+id/tel"
                style="@style/settings_button"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:drawableRight="@drawable/personal_arraws"
                android:gravity="center_vertical"
                android:text="@string/tel" />

            <TextView
                android:id="@+id/aboutUs"
                style="@style/settings_button"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:drawableRight="@drawable/personal_arraws"
                android:gravity="center_vertical"
                android:text="@string/about_us" />

            <RelativeLayout
                style="@style/settings_button"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/hand_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/hand_update"
                    android:textColor="@color/black_03"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/version_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dip"
                    android:layout_marginTop="3dip"
                    android:layout_toLeftOf="@+id/version_arraws"
                    android:gravity="center_vertical"
                    android:text="@string/hand_update"
                    android:textColor="@color/black_02"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/version_arraws"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginTop="3dip"
                    android:layout_alignParentRight="true"
                    android:drawableRight="@drawable/personal_arraws" />
            </RelativeLayout>

            <Button
                android:id="@+id/exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="33dp"
                android:background="@drawable/personal_logout"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>